--- a/Dockerfile_Base
+++ b/Dockerfile_Base
@@ -9,6 +9,14 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # the application crashes without emitting any logs due to buffering.
 ENV PYTHONUNBUFFERED=1
 
+# Arguments
+ARG DEBIAN_FRONTEND=noninteractive
+ARG DEPENDENCIES="\
+  git"
+
+# Update package repository and install necessary packages
+RUN apt-get update && apt-get install -y ${DEPENDENCIES} && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 # Create a non-privileged user that the app will run under.
